# VectorChord-bm25

./: .gitignore  Cargo.toml  META.json.in  Makefile  NON_DETERMINISM_ANALYSIS.md  NON_DETERMINISM_ANALYSIS_EN.md  NON_DETERMINISM_SUMMARY.md  README.md  build.rs  deny.toml  taplo.toml  typos.toml  vchord_bm25.control
.github/workflows/: check.yml  cla.yml  release.yml
crates/bm25/: Cargo.toml
crates/bm25/src/: build.rs  compression.rs  evaluate.rs  guide.rs  lib.rs  search.rs  tape.rs  tuples.rs  types.rs  vector.rs
crates/fuzz/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
sql/: vchord_bm25--0.2.2--0.3.0.sql
sql/install/: vchord_bm25--0.3.0.sql
sql/upgrade/: vchord_bm25--0.1.1--0.2.0.sql  vchord_bm25--0.2.0--0.2.1.sql
src/: lib.rs  weight.rs
src/algorithm/: block_wand.rs
src/datatype/: binary_bm25vector.rs  bytea.rs  functions.rs  functions_bm25vector.rs  memory_bm25vector.rs  mod.rs  text_bm25vector.rs
src/index/: am.rs  build.rs  fetcher.rs  gucs.rs  hook.rs  insert.rs  operators.rs  scan.rs  scanners.rs  storage.rs  traverse.rs  vacuum.rs
src/index/bm25/: filter.rs  mod.rs  types.rs
src/index/bm25/am/: am_build.rs  am_vacuumcleanup.rs  mod.rs
src/index/bm25/scanners/: default.rs  mod.rs
src/page/: inspector.rs  mod.rs  postgres.rs  reader.rs  virtual.rs  writer.rs
src/segment/: builder.rs  growing.rs  meta.rs  sealed.rs  term_stat.rs
src/segment/posting/: append.rs  reader.rs  serializer.rs  writer.rs
src/sql/: bootstrap.sql  finalize.sql
src/tests/: fuzz.rs
src/utils/: loser_tree.rs
tests/sqllogictest/: brute_force.slt
tools/: dump-codegen.sh  dump.sh
