[package]
name = "vchord_bm25"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "vchord_bm25"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_vchord_bm25"
path = "./src/bin/pgrx_embed.rs"

[features]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["dep:rand"]

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.10.0"
bitpacking = { version = "0.9.3", default-features = false, features = [
    "bitpacker4x",
] }
bytemuck = "1.25.0"
generator = "0.8.8"
lending-iterator = "0.1.7"
pgrx = "=0.17.0"
serde.workspace = true
thiserror = "2.0.18"

# used for `pg_test` and `test`
rand = { version = "0.10.0", optional = true }

[dev-dependencies]
pgrx-tests = "=0.17.0"

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[workspace.lints]
# complexity
clippy.too_many_arguments = "allow"
# unsafe
rust.unsafe_code = "deny"
rust.unsafe_op_in_unsafe_fn = "deny"
# unused
rust.unused_extern_crates = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

[profile.dev]
codegen-units = 256
lto = "off"
opt-level = 1
debug = "full"
strip = "none"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
debug = "none"
strip = "symbols"

[profile.prof]
inherits = "release"
debug = "full"
strip = "none"
