[package]
name = "vchord_bm25"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "vchord_bm25"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_vchord_bm25"
path = "./src/bin/pgrx_embed.rs"

[features]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]

[dependencies]
bm25 = { path = "./crates/bm25" }

always_equal.workspace = true
bumpalo = "3.20.2"
index.workspace = true
ordered-float.workspace = true
pgrx = "=0.17.0"
pgrx-catalog = "0.3.2"
serde.workspace = true
toml = "1.0.6"
validator.workspace = true

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), any(target_os = "linux", target_os = "macos")))'.dependencies]
mimalloc = { version = "0.1.48", features = ["local_dynamic_tls"] }

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
always_equal = { git = "https://github.com/tensorchord/VectorChord.git" }
index = { git = "https://github.com/tensorchord/VectorChord.git" }
ordered-float = { version = "5.1.0", default-features = false }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
zerocopy = { version = "0.8.42", features = ["derive"] }

[workspace.lints]
# complexity
clippy.too_many_arguments = "allow"
# unsafe
rust.unsafe_code = "deny"
rust.unsafe_op_in_unsafe_fn = "deny"
# unused
rust.unused_extern_crates = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

[profile.dev]
codegen-units = 256
lto = "off"
opt-level = 1
debug = "full"
strip = "none"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
debug = "none"
strip = "symbols"

[profile.prof]
inherits = "release"
debug = "full"
strip = "none"
