[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4.5.58", features = ["derive", "env"] }
object = { version = "0.38.1", features = ["read", "wasm"] }
serde.workspace = true
serde_json = "1.0.149"
shlex = "1.3.0"
target-triple = "1.0.0"
tempfile = "3.25.0"

[lints]
workspace = true
